# ChessBot2025

./: CMakeLists.txt  base_bot.c  bitboard.c  bitboard.h  bot_ai.c  c_token_count.c  chessapi.c  chessapi.h  example_bot.c  game.pgn  run_bot.bat  run_bot_vshuman.bat
